# dispatcher

./: CMakeLists.txt  README.md
cmake/: dispatcherConfig.cmake.in
examples/: CMakeLists.txt  async_operations.cpp  dispatch_queue.cpp  multiple_queues.cpp  producer_consumer.cpp  thread_pool_example.cpp  thread_safe_data.cpp  timer_example.cpp
include/dispatcher/: DispatchQueue.h  IDispatchQueue.h  IQueueListener.h  TaskQueue.h  ThreadPoolDispatchQueue.h  ThreadedDispatchQueue.h  Types.h
src/: DispatchQueue.cpp  TaskQueue.cpp  ThreadPoolDispatchQueue.cpp  ThreadedDispatchQueue.cpp
